--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-
+  
+  <!-- Fonts --> 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  
   <title>Launcher</title>
 </head>
-<body style="-webkit-app-region: drag">
+<body>
   <div class="bar">
-    <div class="barName">
-      <h1>Launcher</h1>
+    <div class="barLogo">
+      <img src="../resources/svg/m2logo.svg">
+    </div>
+    <div class="barOptions">
+      <div class="barSettings">
+        <img src="../resources/svg/barSettings.svg">
+      </div>
+      <div class="barTurn">
+        <img src="../resources/svg/barTurn.svg">
+      </div>
+      <div class="barClose" id="barClose">
+        <img src="../resources/svg/barClose.svg">
+      </div>
     </div>
   </div>
+  <script src="../src/main.js"></script>
 </body>
 </html>
