--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <button class="menu-button" id="close"></button>
       </div>
     </div>
+    <div id="download-window">
+      <img id="m2net" src="./res/img/m2net.png" />
+      <h1 id="build">Test build 0.1</h1>
+      <input class="download-button" id="choose" type="file" webkitdirectory />
+      <button class="download-button" id="download">Скачать</button>
+    </div>
   </body>
   <script src="res/js/menuHandler.js"></script>
 </html>
